# rust-auth

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  ISSUES.md  README.md  TODO.md  docker-compose.yml
config/: .env
migrations/: 00001_create_rk_table.sql  00002_seed_rk_table.sql
sql/: rk_select_key.sql
src/: auth_service.rs  database.rs  main.rs  service.rs
src/auth_service/: database.rs
src/auth_service/database/: models.rs  utils.rs
src/database/: models.rs  utils.rs
src/db/: db.rs
