[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sqlx-cli = { version = "0.7.1", default-features = false, features = ["native-tls", "postgres"] }
cargo-watch = "8.4.0"

[dev-dependencies]
